--- a/tailwindcss(cli)/package.json
+++ b/tailwindcss(cli)/package.json
@@ -3,6 +3,10 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
+  "scripts": {
+    "dev": "npx tailwindcss -i ./src/input.css -o ./dist/output.css --watch",
+    "build": "tailwind build ./src/input.css -o ./dist/output.css"
+  },
   "devDependencies": {
     "tailwindcss": "^3.3.2"
   }
